--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,11 @@ body {
     width: 100%;
 }
 
+
 section {
 padding: 4rem 0 3rem;
 }
+
 
 header {
     position: fixed;
@@ -54,15 +56,15 @@ header {
 }
 
 .logo {
-  font-size: 1.1rem;
-  color: var(--text-color);
-  font-weight: 400;
+  font-size: 2.1rem;
+  color: var(--main-color);
+  font-weight: 600;
 
 }
 
 
 #cart-icon {
-    font-size: 1.8rem;
+    font-size: 1.9rem;
     cursor: pointer;
 
 }
@@ -70,7 +72,7 @@ header {
 .cart {
     position: fixed;
     top: 0;
-    right: -200%;
+    right: -100%;
     width: 360px;
     min-height: 100vh;
     padding: 20px;
@@ -187,6 +189,13 @@ header {
     margin-top: 2rem;
 }
 
+.sale-content {
+    display: grid;
+    grid-template-columns:repeat(auto-fit, minmax(220px,auto));
+    gap: 1.5rem;
+    padding: 12px 20px;
+}
+
 .shop-content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px,auto));
@@ -235,10 +244,28 @@ header {
     background: hsl(249, 32%, 17%);
 }
 
+/* section registro */
+
 .newsletter .container {
     display: flex;
     align-items: center;
     position: absolute;
+    
 }
+
+/* footer */
+
+.footer  {
+   
+   background-color: aliceblue;
+}
+
+.footer__copyrigth {
+    text-align: center;
+}
+
+
+
+
 
 
